# in_your_dreams

./: CITATION.cff  LICENSE  PROJECT_BRIEF.md  README.md  pyproject.toml
CFC/: .gitignore  LICENSE  PROJECT_BRIEF.md  README.md  SOURCES.md
CFC/results/: RESULTS.md  annual_fluxes.csv  monthly_box_states.csv  parameters.csv  sensitivity.csv
CFC/src/cfc_flux_model/: __init__.py  cli.py  experiment.py  fetch_data.py  forcing.py  model.py  parameters.py  simulation.py  solubility.py
CFC/tests/: test_forcing.py  test_model.py  test_simulation.py
Coupled_Engine/: README.md  pyproject.toml
Coupled_Engine/results/: cfc_inversion_discrepancy_matrix.csv  climate_accounting_error_matrix.csv  methane_lifetime_distortion_matrix.csv  parameters.csv  summary.md  unified_state_trajectory.csv
Coupled_Engine/src/engine/: __init__.py  runner.py
Coupled_Engine/tests/: test_engine.py  test_runner.py
Halogens/: .gitignore  ERROR_LOG.md  README.md  SOURCES.md  driver.py  model.py  pyproject.toml  requirements.txt
Halogens/outputs/: summary.txt
Halogens/tests/: test_standalone_model.py
data/raw/: README.md
results/: summary.csv
src/cfc_flux_model/: cli.py  simulation.py
tests/: test_model.py
