[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "cfc-flux-model"
version = "0.1.0"
description = "Non-equilibrium multi-box model of temperature-driven CFC air-sea flux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
cfc-fetch-data = "cfc_flux_model.fetch_data:main"
cfc-run-model = "cfc_flux_model.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
