[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "coupled-biogeochemical-engine"
version = "0.1.0"
description = "Unified halogen chemistry and CFC air-sea exchange model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
coupled-run-model = "engine.runner:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
