[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "halogen-mbl-model"
version = "0.1.0"
description = "Stiff marine boundary-layer CHBr3 and reactive-bromine box model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.1",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
halogens-run = "driver:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools]
py-modules = ["driver", "model"]
